fix: hardcode correct cors allowed origins list